--- a/helmrelease/sample-app-helmrelease.yaml
+++ b/helmrelease/sample-app-helmrelease.yaml
@@ -13,4 +13,23 @@ spec:
         kind: GitRepository
         name: sample-app-helm-chart
         namespace: flux-system
-  values: {} 
+  values:
+    replicaCount: 2
+    image:
+      repository: nginx
+      tag: "1.25.2"
+      pullPolicy: IfNotPresent
+    service:
+      type: ClusterIP
+      port: 80
+    env:
+      - name: ENVIRONMENT
+        value: "production"
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 50m
+        memory: 64Mi
+# ...add more values as needed for your chart...
